Add session endpoints (#2)
