# api/api.yaml
@@ -4,63 +4,125 @@ info:
   version: 1.0.0
 
 paths:
-  /items:
-    get:
-      summary: Get all items
+  /session/new:
+    post:
+      summary: Initiate new session
+      parameters:
+        - name: Idempotency-Key
+          in: header
+          schema:
+            type: string
+          required: true
       responses:
         '200':
-          description: A list of items
+          description: New session response
           content:
             application/json:
               schema:
-                type: object
-                properties:
-                  items:
-                    type: array
-                    items:
-                      $ref: '#/components/schemas/Item'
-                required:
-                  - items
+                $ref: '#/components/schemas/NewSessionResponse'
 
+  /session/submit:
     post:
-      summary: Add a new item
+      summary: Submit authorization code
       requestBody:
         required: true
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/NewItem'
+              type: object
+              properties:
+                code:
+                  type: string
+                session_id:
+                  type: string
+              required:
+                - code
+                - session_id
       responses:
         '200':
-          description: The created item
+          description: Full session response
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/Item'
+                $ref: '#/components/schemas/SubmitSessionResponse'
+        '400':
+          description: Bad request
+        '401':
+          description: Not authorized
+        '404':
+          description: Not found
+
+  /session/info:
+    get:
+      summary: Get session info
+      parameters:
+        - name: Authorization
+          in: header
+          schema:
+            type: string
+          required: true
+        - name: session_id
+          in: query
+          schema:
+            type: string
+          required: true
+      responses:
+        '200':
+          description: Session info
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/SessionInfo'
+        '400':
+          description: Bad request
+        '401':
+          description: Unauthorized
 
 components:
   schemas:
-    Item:
+    NewSessionResponse:
       type: object
       properties:
-        id:
+        session_id:
           type: string
-        name:
+        authorization_endpoint:
           type: string
-        price:
-          type: number
+        response_type:
+          type: string
+        client_id:
+          type: string
+        scope:
+          type: array
+          items:
+            type: string
+        redirect_uri:
+          type: string
+        state:
+          type: string
+        nonce:
+          type: string
       required:
-        - id
-        - name
-        - price
+        - session_id
+        - authorization_endpoint
+        - response_type
+        - client_id
+        - scope
+        - redirect_uri
+        - state
+        - nonce
 
-    NewItem:
+    SubmitSessionResponse:
       type: object
       properties:
-        name:
+        token:
           type: string
-        price:
-          type: number
       required:
-        - name
-        - price
+        - token
+
+    SessionInfo:
+      type: object
+      properties:
+        email:
+          type: string
+      required:
+        - email
